--- a/Activity12/Exercise_5/style.css
+++ b/Activity12/Exercise_5/style.css
@@ -1,3 +1,4 @@
+/*
 * {
   margin: 0;
 }
@@ -7,8 +8,10 @@ main {
   width: 100vw;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  grid-gap: 0.5rem;
+  grid-template-rows: 1fr 3fr 2fr 2fr 2fr 1fr;
+  grid-gap: 0.3rem;
+  font-size: 1.2rem;
+  color: white;
 }
 
 .item-a {
@@ -17,6 +20,10 @@ main {
   grid-row: 1;
   display: flex;
   justify-content: space-between;
+  padding: 1rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: black;
 }
 
 .item-b {
@@ -60,6 +67,8 @@ main {
   grid-row: 6;
   display: flex;
   justify-content: space-between;
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 
 li {
@@ -87,14 +96,10 @@ li {
   color: white;
 }
 
-.nombre {
-  color: white;
-}
-
 @media only screen and (max-width: 601px) {
   main {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: 1fr 4fr 1.5fr 1fr 1fr 1.5fr 1fr ;
     grid-gap: 0.5rem;
   }
 
@@ -105,7 +110,7 @@ li {
 
   .item-b {
     grid-column: 1 / span 3;
-    grid-row: 2 /span 2;
+    grid-row: 2;
   }
 
   .item-c {
@@ -131,14 +136,162 @@ li {
     grid-row: 4 / span 2;
     z-index: 2;
   }
-
-  .item-h {
+  .item-e {
     grid-column: 1 / span 2;
     grid-row: 7;
   }
-
-  li {
-    display: inline;
-    margin: 0.5rem;
+  .item-h {
+    grid-column: 1 / span 2;
+    grid-row: 6;
   }
+*/
+* {
+  margin: 0;
+}
+
+main {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 4fr 1.5fr 1fr 1fr 1.5fr 1fr;
+  grid-gap: 0.5rem;
+  font-size: 1.2rem;
+  color: white;
+}
+
+.item-a {
+  background-color: rgb(0, 208, 255);
+  grid-column: 1 / span 3;
+  grid-row: 1;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: black;
+}
+
+.item-b {
+  background-color: rgb(183, 112, 186);
+  grid-column: 1 / span 3;
+  grid-row: 2;
+}
+
+.item-c {
+  background-color: rgb(255, 208, 0);
+  grid-column: 1 / span 3;
+  grid-row: 3 / span 2;
+}
+
+.item-d {
+  background-color: rgb(49, 111, 66);
+  display: none;
+}
+
+.item-e {
+  background-color: rgb(61, 61, 71);
+  grid-column: 1 / span 2;
+  grid-row: 7;
+}
+
+.item-f {
+  background-color: rgb(0, 177, 115);
+  display: none;
+}
+
+.item-g {
+  background-color: rgb(238, 176, 247);
+  grid-column: 2;
+  grid-row: 4 / span 2;
+  z-index: 2;
+}
+
+.item-h {
+  background-color: rgb(255, 187, 0);
+  grid-column: 1 / span 2;
+  grid-row: 6;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+li {
+  display: inline;
+  margin: 1rem;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.enlaces {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.datos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: end;
+  color: white;
+}
+
+@media only screen and (min-width: 600px) {
+  main {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 3fr 2fr 2fr 2fr 1fr;
+  }
+
+  .item-a {
+    grid-column: 1 / span 3;
+    grid-row: 1;
+  }
+
+  .item-b {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .item-c {
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 2;
+  }
+
+  .item-d {
+    grid-row: 3 / span 2;
+    display: block;
+  }
+
+  .item-e {
+    grid-column: 2 / span 2;
+    grid-row: 4;
+  }
+
+  .item-f {
+    grid-column: 1 / span 2;
+    grid-row: 5;
+    display: block;
+  }
+
+  .item-g {
+    grid-column: 3;
+    grid-row: 5;
+  }
+
+  .item-h {
+    grid-column: 1 / span 3;
+    grid-row: 6;
+  }
+}
+
+li {
+  display: inline;
+  margin: 0.5rem;
+}
 }
