--- a/FinalTask/css/footer.css
+++ b/FinalTask/css/footer.css
@@ -1,5 +1,34 @@
 footer {
-  background-color: red;
-  height: 12rem;
+  background-color: #B4A7D6;
   border-radius: 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  border-style: solid;
+  border-color: #8E7CC3;
+  margin-top: 1rem;
+}
+
+footer > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.divFoot {
+  display: flex;
+  flex-direction: row;
+}
+
+.pFooter {
+  margin-bottom: 0;
+  font-size: larger;
+}
+.divFoot > img {
+  margin-right: 0.5rem;
+}
+#nameEmpresa{
+  font-size: xx-large;
+  font-family: 'Brush Script MT', cursive;
 }
