--- a/FinalTask/css/style.css
+++ b/FinalTask/css/style.css
@@ -1,7 +1,24 @@
 main {
   padding: 1rem;
+  height: 100vh;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 12rem 1fr 12rem ;
   grid-gap: 1rem;
+}
+
+.breadcrumb{
+  margin-left: 1rem;
+}
+
+a:link, a:visited, a:active{
+  text-decoration:none;
+}
+
+section  a{
+  color: black
+}
+
+li a{
+  color: blue;
 }
