--- a/FinalTask/css/producDetail.css
+++ b/FinalTask/css/producDetail.css
@@ -139,9 +139,14 @@ section>div {
   background-color: #bb7000;
   color: white;
 }
+#aTabla{
+  width: 100%;
+  color: black;
+}
 
 table{
-  width: 50%;
+  width: 100%;
+  margin-left: 1rem;
 }
 
 #tabla {
